Cleaning up css and squashing bugs

--- a/css/infographic.css
+++ b/css/infographic.css
@@ -83,7 +83,7 @@ header
 	padding: 70px;
 	background: #f2f2f2;
 	background-size: 1900px 708px;
-	height: 500px; /*remove when done*/
+	height: 600px; /*remove when done*/
 	color: #666666;	
 }
 
