--- a/css/listings.css
+++ b/css/listings.css
@@ -70,6 +70,7 @@ li#menu_tab {
 	float: right;
 	font-size: 20px;
 	list-style-type: none;
+	color: #ffffff;
 }
 
 #nav_logo {
